[package]
name = "macros"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hello_macro = {package = "hello_macro", version = "0.1.0", path= "../hello_macro"}
hello_macro_derive = {package = "hello_macro_derive", version = "0.1.0", path= "../hello_macro/hello_macro_derive"}
